# ROS-system-in-a-ABB-IRB120

./: LICENSE  README.md
abb_irb120_moveit_config/: CMakeLists.txt  package.xml
abb_irb120_moveit_config/config/: abb_irb120_support.srdf  controllers.yaml  joint_limits.yaml
abb_irb120_moveit_config/launch/: abb_irb120_final_project  abb_irb120_support_moveit_controller_manager.launch.xml  move_group.launch  moveit_planning_execution.launch  planning_context.launch  sensor_manager.launch.xml  trajectory_execution.launch.xml
abb_irb120_support/: manifest.xml  urdf.rviz
abb_irb120_support/collision_meshes/: Link1_collision.stl  Link2_collision.stl  Link3_collision.stl  Link4_collision.stl  Link5_collision.stl  Link6_collision.stl  Link7_collision.stl  base_link_collision.stl
abb_irb120_support/launch/: display.launch  gazebo.launch  robot_interface_irb120.launch
abb_irb120_support/meshes/: Link1.STL  Link2.STL  Link3.STL  Link4.STL  Link5.STL  Link6.STL  Link7.STL  base_link.STL
abb_irb120_support/robots/: abb_irb120_support.URDF
move/: CMakeLists.txt  package.xml
move/src/: move_node.cpp
perception/: CMakeLists.txt  package.xml
perception/src/: perception_node(original_ok).cpp  perception_node.cpp
position/: CMakeLists.txt  package.xml
position/launch/: kinect_transform.launch
position/src/: 20160831_position_node (còpia).cpp  20160905_position_node (còpia).cpp  position_node.cpp  position_node_copia.cpp
